Remove ignoring device mode from the server.

It was ignored for Active Directory devices cause server was not setup
properly.

BUG=639066
TEST=manual

Review-Url: https://codereview.chromium.org/2526283003
Cr-Commit-Position: refs/heads/master@{#434351}

Former-commit-id: b7329389843816bda2aeeeaa3366721aae3d9b89